# nomad-measurements-magnetometry

./: 404.html  index.html  pyproject.toml
explanation/: explanation.html
how_to/: contribute_to_the_documentation.html  contribute_to_this_plugin.html  install_this_plugin.html  use_this_plugin.html
reference/: references.html
search/: search_index.json
src/nomad_measurements_magnetometry/parsers/: __init__.py  parser.py
src/nomad_measurements_magnetometry/schema_packages/: __init__.py  agm_schema.py  schema_package.py  vsm_schema.py
tests/parsers/: test_parser.py
tests/schema_packages/: test_schema_package.py
tutorial/: tutorial.html
